synapse_plugins_sources = files(
  'CalculatorPlugin.vala',
  'CommandPlugin.vala',
  'DesktopFilePlugin.vala',
  'DictionaryPlugin.vala',
  'OpenSearchPlugin.vala',
  'PassPlugin.vala',
  'SelectionPlugin.vala',
  'SshPlugin.vala',
  'SystemManagementPlugin.vala',
  'ZeitgeistPlugin.vala',
  'ZeitgeistRelatedPlugin.vala'
)
