synapse_ui_sources = files(
  'Category.vala',
  'Controller.vala',
  'IconCacheService.vala',
  'Interfaces.vala',
  'Keybindings.vala',
  'Main.vala',
  'MatchListViewWidgets.vala',
  'Model.vala',
  'Settings.vala',
  'Widgets.vala',
  'Utils.vala'
)

synapse_ui_sources += files(
  'TileView/AbstractTileObject.vala',
  'TileView/Tile.vala',
  'TileView/TileView.vala',
  'TileView/WrapLabel.vala'
)

synapse_ui_sources += files(
  'Themes/BaseView.vala',
  'Themes/DefaultView.vala',
  'Themes/DoishView.vala',
  'Themes/EssentialView.vala',
  'Themes/SideDoishView.vala',
  'Themes/VirgilioView.vala'
)
